--- a/styl.css
+++ b/styl.css
@@ -6,7 +6,7 @@ body{
 
 p{
     text-align: justify;
-    margin: 15vh;
+    //padding: 10vh;
     font-family: "arial";
     font-size: 200%;
 }
@@ -59,32 +59,43 @@ section h1{
 }
 
 .sideBySide{
-    display: inline-flex;
+    //background-color: #232323;
+    display: flex;
     //height: 33vh;
 }
 
+.sideBySide #portrait{
+    background-image: url("background.jpg");
+    flex-grow: 1;
+    width: 50%;
+    //height: 50vh;
+}
+
+.sideBySide #text{
+    flex-grow: 3;
+    width: 50%;
+    margin: 15vh;
+    //color: white;
+}
+
 .fiddlebox{
-    height: 70vh;
+    height: 100vh;
     background-color: #232323;
+    overflow: hidden;
 }
 
 .fiddlebox h1{
-    //position: relative;
-    //left: 50vw;
-    //top: 35vh;
+    width: 100vw;
     color: mintcream;
     margin: 0 auto;
     padding: 0;
-    transform: translateY(35vh);
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
+    transform: translateY(50vh);
 }
 
 .fiddlebox span{
     display: inline-block;
-    //color: transparent;
-    color: white;
+    color: transparent;
+    //color: white;
     //  padding: 25px;
     font-size: 200%;
     transition: all 0.1s ease-in-out;
@@ -102,8 +113,4 @@ section h1{
     width: 70vw;
     //margin: 10vh;
     flex-grow: 3;
-}
-
-#portrait{
-    background-image: url("background.jpg");
 }
