--- a/styl.css
+++ b/styl.css
@@ -22,6 +22,7 @@ p{
     height: 100vh;
     width: 100%;
     display: flex;
+    //background-attachment: fixed;
 }
 
 .coverText{
@@ -50,6 +51,7 @@ p{
 .aboutMe{
     background-color: white;
     //display: inline-flex;
+    margin-bottom: 5vh;
 }
 
 section h1{
@@ -62,19 +64,23 @@ section h1{
     //background-color: #232323;
     display: flex;
     //height: 33vh;
+    //margin-bottom: 10vh;
 }
 
 .sideBySide #portrait{
     background-image: url("background.jpg");
+    //background-attachment: fixed;
     flex-grow: 1;
     width: 50%;
-    //height: 50vh;
+    height: 70vh;;
 }
 
 .sideBySide #text{
     flex-grow: 3;
     width: 50%;
-    margin: 15vh;
+    margin: 10vh;
+    height: 50vh;
+    font-size: 150%;
     //color: white;
 }
 
@@ -85,20 +91,21 @@ section h1{
 }
 
 .fiddlebox h1{
-    width: 100vw;
+    width: 100%;
     color: mintcream;
     margin: 0 auto;
     padding: 0;
+    position: absolute;
     transform: translateY(50vh);
 }
 
 .fiddlebox span{
     display: inline-block;
-    color: transparent;
+    color: rgba(255,255,255,0.03);
     //color: white;
     //  padding: 25px;
     font-size: 200%;
-    transition: all 0.1s ease-in-out;
+    transition: all 0.05s ease-in-out;
 }
 
 .fiddlebox span:hover{
@@ -113,4 +120,58 @@ section h1{
     width: 70vw;
     //margin: 10vh;
     flex-grow: 3;
+}
+
+.contactMe{
+}
+
+.contactMe form{
+    margin: 5vh auto;
+}
+
+.contactMe input,textarea{
+    line-height: 5vh;
+    font-size: 5vh;
+    border: solid black 3px;
+    border-radius: 5px;
+    padding: 1vh;
+    margin: 1vh;
+    display: block;
+    width: 50vw;
+    font-family: 'Abril Fatface', cursive;
+    margin: 1vh auto;
+}
+
+#odeslat{
+    background-color: black;
+    color: white;
+    width: auto;
+    //margin: 1vh;
+}
+
+.footer{
+    background-color: #232323;
+    margin: 0;
+    padding: 0 1vw;
+    color: white;
+    font-size: 50%;
+}
+
+.footer p{
+    padding: 1vh;
+    margin: 0;
+    text-align: center;
+}
+
+::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+  color: rgba(0,0,0,0.3);
+}
+::-moz-placeholder { /* Firefox 19+ */
+  color: rgba(0,0,0,0.3);
+}
+:-ms-input-placeholder { /* IE 10+ */
+  color: rgba(0,0,0,0.3);
+}
+:-moz-placeholder { /* Firefox 18- */
+  color: rgba(0,0,0,0.3);
 }
