--- a/styl.css
+++ b/styl.css
@@ -51,7 +51,7 @@ p{
 .aboutMe{
     background-color: white;
     //display: inline-flex;
-    margin-bottom: 5vh;
+    //margin-bottom: 5vh;
 }
 
 section h1{
@@ -68,11 +68,14 @@ section h1{
 }
 
 .sideBySide #portrait{
-    background-image: url("background.jpg");
+    background-image: url("coder2.jpg");
     //background-attachment: fixed;
+    //background-size: contain;
+    transform: scaleX(-1);
     flex-grow: 1;
     width: 50%;
-    height: 70vh;;
+    height: 70vh;
+    //margin: 1vh;
 }
 
 .sideBySide #text{
@@ -174,4 +177,19 @@ section h1{
 }
 :-moz-placeholder { /* Firefox 18- */
   color: rgba(0,0,0,0.3);
+}
+
+body::-webkit-scrollbar {
+    width: 1em;
+    display: none;
+}
+
+body::-webkit-scrollbar-track {
+    //-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    background-color: #232323;
+}
+ 
+body::-webkit-scrollbar-thumb {
+  background-color: #101010;
+  outline: 1px solid slategrey;
 }
